fixed header spacing

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -65,6 +65,9 @@ h4 {
 }
 @media not print {
     main {
+        & > h3 {
+            margin-bottom: 2rem;
+        }
         padding: 0 2rem 8rem 2rem;
         @media only screen and (min-width: 1281px) {
             margin: auto;
