--- a/src/styles/entry.scss
+++ b/src/styles/entry.scss
@@ -1,7 +1,4 @@
 .entry {
-    h3 {
-        margin-bottom: 2rem;
-    }
     width: 40rem;
     max-width: 95%;
     &:not(:last-of-type) {
